# GRO860_projetsession

./: analyze_logs.py  export_config.json  export_scalar.py  parking.py  parking_performance.txt  performance_tracker.py  reward_logger.py  strip_json.py  tensorboard_scalars.csv  test.py  test_agent.py  test_agent_reward.py  train_parking.py  verify_parking.py  visualize_reward.py
flappy-rl/: .gitignore  README.md  pyproject.toml
flappy-rl/flappy/: __init__.py  env.py  physics.py  render.py  utils.py
flappy-rl/scripts/: evaluate.py  train_dqn.py  train_ppo.py  train_rl.py
flappy-rl/tests/: test_collisions.py  test_obs.py  test_reward.py
logs/: evaluations.npz
logs/PPO_1/: events.out.tfevents.1762018109.Christophers-MacBook-Air.local.84797.0  events.out.tfevents.1762288476.Christophers-MacBook-Air.local.37475.0
logs/PPO_10/: events.out.tfevents.1762053093.Christophers-MacBook-Air.local.99542.0  events.out.tfevents.1762311084.Christophers-MacBook-Air.local.50504.0
logs/PPO_11/: events.out.tfevents.1762056694.Christophers-MacBook-Air.local.2788.0  events.out.tfevents.1762311102.Christophers-MacBook-Air.local.50598.0
logs/PPO_12/: events.out.tfevents.1762058312.Christophers-MacBook-Air.local.4312.0  (+1 more)
models/: ppo_parking_lidar_vecnormalize.npy  ppo_parking_lidar_vecnormalize.pkl
reward_logs/: rewards_20251103_132214.json  rewards_20251103_132247.json  rewards_20251103_141443.json  summary_20251103_132124.txt  summary_20251103_132214.txt  summary_20251103_132247.txt  summary_20251103_141405.txt  summary_20251103_141443.txt  summary_20251105_124654.txt
(+197 files in other folders)
