[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flappy-rl"
version = "0.1.0"
description = "Flappy Bird RL environment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "gymnasium",
  "pygame",
  "stable-baselines3",
  "numpy",
  "torch",
  "tqdm",
  "tensorboard",
  "pytest",
  "imageio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flappy*"]
